--- a/DroidCafe/app/src/main/res/layout/activity_order.xml
+++ b/DroidCafe/app/src/main/res/layout/activity_order.xml
@@ -83,7 +83,7 @@
         android:hint="Enter your phone"
         android:inputType="phone"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
-        app:layout_constraintEnd_toStartOf="@+id/spinner_phone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
 
     <TextView
@@ -91,10 +91,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Note"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_text" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_phone" />
 
     <EditText
         android:id="@+id/note_text"
@@ -108,14 +108,15 @@
         android:inputType="textMultiLine"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
         android:text="Chọn phương thức giao hàng"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,9 +155,9 @@
         android:id="@+id/spinner_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/phone_text" />
+        app:layout_constraintHorizontal_bias="0.212"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
